# Example-RGB

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RGB.cabal  RGB.haddock  RGB.html  doc-index.html  index.html
.github/workflows/: haddock-pages.yml  test.yml
src/: RGB.hs
test/: tests.hs
test/RGB/: Test.hs  TestCodewars.hs  TestRGB.hs
