cabal-version:      3.0
name:               RGB
version:            0.1.0.0
synopsis:           RGB color handling library
homepage:           https://mirko.westermeier.de/RGB/RGB.html
bug-reports:        https://github.com/memowe/RGB/issues
license:            MIT
license-file:       LICENSE
author:             Mirko Westermeier
maintainer:         mirko.westermeier@uni-muenster.de

copyright:          (c) 2022 Mirko Westermeier
category:           Graphics
extra-source-files: CHANGELOG.md

library
    exposed-modules:  RGB
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite RGB-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    other-modules:
        RGB.TestRGB,
        RGB.TestCodewars
    hs-source-dirs:   test
    main-is:          tests.hs
    build-depends:
        base,
        RGB,
        tasty,
        tasty-hunit
